kubernetes/argocd/admin-plugin/proxy-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitops-plugin-proxy
    app.kubernetes.io/instance: gitops-plugin-proxy
    app.openshift.io/runtime: go
  name: gitops-plugin-proxy
  namespace: gitops-admin-plugin
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: gitops-plugin-proxy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: gitops-plugin-proxy
    spec:
      containers:
        - image: quay.io/gnunn/gitops-plugin-proxy:latest@sha256:4b5cd754f09c8dc3cd8dc69ab7b91c5725b7683b712f592b019fcf4afa6fa180
          imagePullPolicy: IfNotPresent
          name: gitops-plugin-proxy
          ports:
            - containerPort: 8443
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
              cpu: 100m
            requests:
              cpu: 10m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /mnt/certs
              name: gitops-plugin-proxy-certs
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
        - name: gitops-plugin-proxy-certs
          secret:
            defaultMode: 420
            secretName: gitops-plugin-proxy-certs
