kubernetes/argocd/admin-plugin/proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1685893963
    service.beta.openshift.io/serving-cert-secret-name: gitops-plugin-proxy-certs
    service.beta.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1685893963
  labels:
    app: gitops-plugin-proxy
    app.kubernetes.io/instance: gitops-plugin-proxy
  name: gitops-plugin-proxy
  namespace: gitops-admin-plugin
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 8443
  selector:
    name: gitops-plugin-proxy
